ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_23.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-sexagesima\", \"dominica-of-sexagesima\"]"
expression: s.0
---
2025-02-23
Second Vespers of Dominica Sexagesima:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
