ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_01.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-quinquagesima\", \"dominica-of-sexagesima\"]"
expression: s.0
---
2025-03-01
First Vespers of Dominica Quinquagesima:
Vespers:
  Antiphons:   Ordinary of Sexagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Psalter
  Hymn:        Psalter
  Verse:       Psalter
  Magnificat:  Proper
  Collect:     Proper
