ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_02.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-quinquagesima\", \"dominica-of-quinquagesima\"]"
expression: s.0
---
2025-03-02
Second Vespers of Dominica Quinquagesima:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
