ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_03.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-ii-after-quinquagesima\", \"feria-of-quinquagesima\"]"
expression: s.0
---
2025-03-03
Vespers of Feria II after Quinquagesima:
Vespers:
  Antiphons:   Ordinary of Quinquagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Quinquagesima (or Psalter)
  Hymn:        Ordinary of Quinquagesima (or Psalter)
  Verse:       Ordinary of Quinquagesima (or Psalter)
  Magnificat:  Ordinary of Quinquagesima (or Psalter)
  Collect:     of Sunday
