ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_04.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--casimir--confessor\", \"st--casimir\"]"
expression: s.0
---
2025-03-04
Vespers of St. Casimir, Confessor:
Vespers:
  Antiphons:   Ordinary of Quinquagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
