ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_05.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"ash-wednesday\", \"feria-of-lent\"]"
expression: s.0
---
2025-03-05
Vespers of Ash Wednesday:
Vespers:
  Antiphons:   Ordinary of Quinquagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Quinquagesima (or Psalter)
  Hymn:        Ordinary of Quinquagesima (or Psalter)
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
