ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_03_06.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-v-after-start-of-lent\", \"feria-of-lent\"]"
expression: s.0
---
2025-03-06
Vespers of Feria V after start of Lent:
Vespers:
  Antiphons:   Ordinary of Quinquagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Quinquagesima (or Psalter)
  Hymn:        Ordinary of Quinquagesima (or Psalter)
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
